- удаление blob с серверов после их получения
