# src/Server/ShortP2P.MessengerServer.UseCases/Blobs/DeleteBlobCommand.cs
@@ -1,0 +1,3 @@
+namespace ShortP2P.MessengerServer.UseCases.Blobs;
+
+public sealed record DeleteBlobCommand(string BlobId, string CallerNetworkId);
